# plox-lang

./: README.md  fun.lox  pyproject.toml  scope.lox  scratch.lox  semicolon_inference_issue.lox  test.lox
d20/: __init__.py  schema.sql  seed.py
d20/db/: game.py
d20/routes/: auth.py
d20/templates/: base.html
examples/: input.txt  test.lox  word_counter.lox
examples/word_counter/: input1.txt  input2.txt  output.txt  word_counter.lox
lang/plox/: interpreter.py  lox.py
plox/: __init__.py  __main__.py  ast_printer.py  interpreter.py  parser.py  plox.py  resolver.py  runner.py  scanner.py  semicolon_inference.py
plox/builtin_functions/: builtin_argv.py  builtin_array.py  builtin_assert.py  builtin_classes.py  builtin_clock.py  builtin_map.py  builtin_pair.py  builtin_print.py  builtin_read.py  builtin_set.py  builtin_string.py
plox/native_functions/: native_array.py  native_assert.py  native_classes.py  native_clock.py  native_print.py
plox/types/: control_flow.py  enums.py  environment.py  expr.py  lox_callable.py  lox_error.py  lox_function.py  lox_token.py  runtime_error.py  static_error.py  stmt.py  token_type.py
tests/: run_tests.py  test_framework_plox.py  test_lox_files.py  test_print_ast.py
tests/__snapshots__/: test_lox_files.ambr
tests/testFiles/: closure.lox  increment.lox  modulo.lox  print.lox  scoping.lox
tests/test_files/: ardatest.lox  ardatest.lox.expected  break.lox.expected  classes.lox  closure.lox.expected  continue.lox  continue.lox.expected  fib_rec.lox.expected  for.lox  for.lox.expected  fortest.lox  fortest.lox.expected  (+19 more)
(+49 files in other folders)
