[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plox"
version = "0.1.0"
description = "A Python implementation of the Lox programming language"
authors = [{name = "Omer Can Baykara"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
plox = "plox.plox:main"
